--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
     "static": "public",
     "newmd": "新建",
     "in_save": "保存",
+    "in_chanel": "取消",
     "content_save": "保存文档",
     "content_copy": "复制文档",
     "new_info": [
